# dinomo

./: .gitignore  CMakeLists.txt  README.md  install-rdma.sh
client/cpp/: CMakeLists.txt  cli.cpp
client/python/: setup.py
cluster/: .travis.yml  README.md
cluster/dinomo/cluster/: add_nodes.py  create_cluster.py  remove_node.py  run_cluster.py
cluster/dinomo/cluster/kubespray/: add_servers.sh  benchmarkNodes  create_cluster_object.sh  masterNode  memoryNodes  prepare_host_configurations.sh  remove_server.sh  routingNodes  run_storage_nodes.sh  storageNodes
cluster/dinomo/cluster/yaml/ds/: asymnvm-bench-ds.yml  asymnvm-ds.yml  benchmark-ds.yml  clover-bench-ds.yml  clover-ds.yml  memory-ds.yml  routing-ds.yml
cluster/dinomo/management/: k8s_server.py  management_server.py  util.py
cluster/dinomo/management/scaler/: base_scaler.py  default_scaler.py
cluster/dinomo/shared/: util.py
cluster/dockerfiles/: dinomo-base.dockerfile
cluster/dockerfiles/cluster/: management.dockerfile  start-management.sh  start-test.sh
cluster/docs/: getting-started-aws.md
cluster/scripts/: compile-proto.sh
cluster/scripts/travis/: docker-build.sh
common/: .clang-format  README.md
common/include/: CMakeLists.txt  common.hpp  requests.hpp  threads.hpp  types.hpp
common/include/client/: kvs_client.hpp
common/include/lattices/: core_lattices.hpp  lattice.hpp  lww_pair_lattice.hpp  multi_key_causal_lattice.hpp  priority_lattice.hpp  single_key_causal_lattice.hpp
common/include/zmq/: socket_cache.cpp  socket_cache.hpp  zmq_util.cpp  zmq_util.hpp
common/mock/: CMakeLists.txt  kvs_mock_client.hpp  mock_zmq_utils.cpp  mock_zmq_utils.hpp
common/proto/: anna.proto  causal.proto  cloudburst.proto  shared.proto
common/scripts/: install-dependencies.sh
conf/: dinomo-base.yml  dinomo-local.yml
dockerfiles/: asymnvm.dockerfile  clover.dockerfile  dinomo.dockerfile  start-clover.sh  start-dinomo.sh
include/: CMakeLists.txt  consistent_hash_map.hpp  hash_ring.hpp  hashers.hpp  kvs_common.hpp  kvs_threads.hpp  kvs_types.hpp  metadata.hpp
include/clover/: client.h  clover_api.h  ibsetup.h  mitsume.h  mitsume_benchmark.h  mitsume_clt_test.h  mitsume_parameter.h  mitsume_tool.h
include/kvs/: base_kv_store.hpp  clover.hpp  debug.h  dinomo_compute.hpp  dinomo_storage.hpp  ib.h  ib_config.h  kvs_handlers.hpp  log_blocks.h  server_utils.hpp  setup_ib.h  sock.h
include/monitor/: monitoring_handlers.hpp  monitoring_utils.hpp  policies.hpp
include/proto/: benchmark.proto  metadata.proto
include/route/: routing_handlers.hpp
kubespray/: .gitignore  ansible.cfg
kubespray/inventory/dinomo_cluster/: inventory.ini
kubespray/roles/download/defaults/: main.yml
kubespray/roles/download/tasks/: download_file.yml
memcached/: memcached.c  memcached.h
scripts/: build.sh  clean_build_docker.sh  delete_docker_images.sh  delete_pods.sh  dependencies.sh  hugepages-remove.sh  register_ssh_knownhost.sh  run_memory.sh  run_ms.sh
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  benchmark.cpp  trigger.cpp
src/hash_ring/: CMakeLists.txt  hash_ring.cpp
src/kvs/: CMakeLists.txt  cache_ip_response_handler.cpp  clover.cpp  dinomo_compute.cpp  dinomo_storage.cpp  dpm.cpp  failover_handler.cpp  gossip_handler.cpp  ib.cpp  ib_config.cpp  management_node_response_handler.cpp  node_depart_handler.cpp  node_join_handler.cpp  replication_change_handler.cpp  replication_response_handler.cpp  self_depart_handler.cpp  server.cpp  setup_ib.cpp  sock.cpp  user_request_handler.cpp  utils.cpp
src/kvs/Cache/: .gitignore
src/kvs/Cache/cuckoo-based/: adaptive-cache.h  cache_api.cc  cache_api.h  empty-cache.h  example.cpp  hybrid-cache.h  string-key.h
src/kvs/Cache/cuckoo-based/libcaches/include/: cache.hpp  cache_policy.hpp  lfu_cache_policy.hpp  lru_cache_policy.hpp
src/kvs/Cache/cuckoo-based/libcuckoo/include/libcuckoo/: bucket_container.hh  cuckoohash_config.hh  cuckoohash_map.hh  cuckoohash_util.hh
src/kvs/Cache/cuckoo-based/libcuckoo/share/cmake/libcuckoo/: libcuckoo-config-version.cmake  libcuckoo-targets.cmake
src/kvs/Indexes/P-CLHT/include/: clht_lb_res.h
src/kvs/Indexes/P-CLHT/src/: clht_gc.c  clht_lb_res.c
src/kvs/Indexes/P-Masstree/: masstree.cpp  masstree.h
src/kvs/clover/: client.cc  clover_api.cc  cmemcached.cc  ibsetup.cc  init.cc  memory.cc  mitsume_benchmark.cc  mitsume_clt_test.cc  mitsume_clt_tool.cc  mitsume_con_alloc.cc  mitsume_con_thread.cc  mitsume_tool.cc  mitsume_tool_gc.cc  mitsume_util.cc  server.cc
src/kvs/libbloom/: bloom.c  bloom.h
src/monitor/: CMakeLists.txt  depart_done_handler.cpp  elasticity.cpp  feedback_handler.cpp  membership_handler.cpp  monitoring.cpp  movement_policy.cpp  replication_helpers.cpp  slo_policy.cpp  stats_helpers.cpp  storage_policy.cpp
src/route/: CMakeLists.txt  address_handler.cpp  membership_handler.cpp  replication_change_handler.cpp  replication_response_handler.cpp  routing.cpp  seed_handler.cpp
